--- a/index.html
+++ b/index.html
@@ -27,17 +27,37 @@
         <div id="main-visual">
             <img src="img/mainvisual.jpg" alt="">
         </div>
-        <section id="about">
+        <section id="about" class="wrapper">
+            <h2 class="section-title">About</h2>
             <div class="content">
-                <img src="img/logo.svg" alt="">
+                <img src="img/about.jpg" alt="">
                 <div class="text">
                     <h3>KAKERU MIYAICHI</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure a quas quis pariatur, et eos cum. Cumque, impedit facere. At.</p>
                 </div>
             </div>
         </section>
-        <section id="bicycle">
-            <h2>Bicycle</h2>
+        <section id="bicycle" class="wrapper">
+            <h2 class="section-title">Bicycle</h2>
+            <div class="content">
+                <ul>
+                    <li>
+                        <img src="./img/bicycle1.jpg" alt="">
+                        <h3>title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, a?</p>
+                    </li>
+                    <li>
+                        <img src="./img/bicycle1.jpg" alt="">
+                        <h3>title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, a?</p>
+                    </li>
+                    <li>
+                        <img src="./img/bicycle1.jpg" alt="">
+                        <h3>title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, a?</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer>© 2020 Profile</footer>
