ベースデザイン完成

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="#about">About</a>
                 </li>
                 <li>
-                    <a>Bicycle</a>
+                    <a href="#bicycle">Bicycle</a>
                 </li>
             </ul>
         </nav>
@@ -47,14 +47,14 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, a?</p>
                     </li>
                     <li>
-                        <img src="./img/bicycle1.jpg" alt="">
+                        <img src="./img/bicycle2.jpg" alt="">
                         <h3>title</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, a?</p>
                     </li>
                     <li>
-                        <img src="./img/bicycle1.jpg" alt="">
+                        <img src="./img/bicycle3.jpg" alt="">
                         <h3>title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, a?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi eius debitis dolorem nemo itaque eaque nihil dolores quod! Voluptas veritatis ab ducimus dolore qui sint, id quia iste beatae alias, illo aperiam, hic repellat odit? Facere in aliquid, repellat nesciunt veritatis quia blanditiis possimus cum itaque. Distinctio placeat tempore facere!</p>
                     </li>
                 </ul>
             </div>
